Se creó con Colab

--- a/notebooks/ultimate_rvc_colab.ipynb
+++ b/notebooks/ultimate_rvc_colab.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jewss234/papus/blob/main/notebooks/ultimate_rvc_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "kmyCzJVyCymN"
       },
       "source": [
@@ -21,11 +31,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "ID-T_ATCZzkY",
-        "outputId": "fef71b1f-3083-4db1-ca74-97efc028dfa6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ID-T_ATCZzkY",
+        "outputId": "fef71b1f-3083-4db1-ca74-97efc028dfa6"
       },
       "outputs": [
         {
@@ -60,10 +70,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "aaokDv1VzpAX",
-        "outputId": "9ffbb49c-6b0f-47e2-855b-ab1ed3299837",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9ffbb49c-6b0f-47e2-855b-ab1ed3299837"
       },
       "outputs": [
         {
@@ -91,10 +101,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "lVGNygIa0F_1",
-        "outputId": "5b5cdcd6-0e23-4698-93f8-bc2f5893cab0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b5cdcd6-0e23-4698-93f8-bc2f5893cab0"
       },
       "outputs": [
         {
@@ -126,10 +136,10 @@
       "execution_count": null,
       "metadata": {
         "id": "lVGNygIa0F_2",
-        "outputId": "241d87a8-c8a7-49d0-d172-aa519f47ac08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "241d87a8-c8a7-49d0-d172-aa519f47ac08"
       },
       "outputs": [
         {
@@ -310,7 +320,105 @@
             "               ^^^^^^^^^^^^^^^^^^\n",
             "  File \"/content/HRVC/src/ultimate_rvc/web/common.py\", line 77, in _wrapped_fn\n",
             "    raise gr.Error(str(e)) from e\n",
-            "gradio.exceptions.Error: 'The default pretrained model is incompatible with the vocoder RefineGAN.'\n"
+            "gradio.exceptions.Error: 'The default pretrained model is incompatible with the vocoder RefineGAN.'\n",
+            "Downloading files: 1.30GiB [00:23, 55.3MiB/s]\n",
+            "Downloading files: 1.30GiB [00:20, 62.3MiB/s]\n",
+            "Downloading files: 1.30GiB [00:22, 59.0MiB/s]\n",
+            "Downloading files: 1.30GiB [00:22, 58.0MiB/s]\n",
+            "Downloading files: 1.30GiB [00:23, 56.2MiB/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/web/common.py\", line 70, in _wrapped_fn\n",
+            "    res = fn(*args, **kwargs)\n",
+            "          ^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/core/train/train.py\", line 288, in run_training\n",
+            "    pg, pd = _get_pretrained_model(\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/core/train/train.py\", line 99, in _get_pretrained_model\n",
+            "    raise IncompatibleVocoderError(vocoder)\n",
+            "ultimate_rvc.core.exceptions.IncompatibleVocoderError: The default pretrained model is incompatible with the vocoder RefineGAN.\n",
+            "\n",
+            "The above exception was the direct cause of the following exception:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/queueing.py\", line 625, in process_events\n",
+            "    response = await route_utils.call_process_api(\n",
+            "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/route_utils.py\", line 322, in call_process_api\n",
+            "    output = await app.get_blocks().process_api(\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/blocks.py\", line 2136, in process_api\n",
+            "    result = await self.call_function(\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/blocks.py\", line 1662, in call_function\n",
+            "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+            "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/to_thread.py\", line 56, in run_sync\n",
+            "    return await get_async_backend().run_sync_in_worker_thread(\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 2485, in run_sync_in_worker_thread\n",
+            "    return await future\n",
+            "           ^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 976, in run\n",
+            "    result = context.run(func, *args)\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/utils.py\", line 883, in wrapper\n",
+            "    response = f(*args, **kwargs)\n",
+            "               ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/web/common.py\", line 77, in _wrapped_fn\n",
+            "    raise gr.Error(str(e)) from e\n",
+            "gradio.exceptions.Error: 'The default pretrained model is incompatible with the vocoder RefineGAN.'\n",
+            "100% 11/11 [00:27<00:00,  2.46s/it]\n",
+            "\u001b[1m[\u001b[0m~\u001b[1m]\u001b[0m Extracting pitch features\u001b[33m...\u001b[0m\n",
+            "100% 942/942 [00:00<00:00, 1086.26it/s]\n",
+            "\u001b[1m[\u001b[0m~\u001b[1m]\u001b[0m Extracting audio embeddings\u001b[33m...\u001b[0m\n",
+            "100% 942/942 [00:00<00:00, 2251.59it/s]\n",
+            "/content/HRVC/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py:627: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n",
+            "2025-10-11 04:48:45 - ERROR - ultimate_rvc.rvc.train.train - The parameters of the pretrain model such as the sample rate or architecture do not match the selected model.\n",
+            "[rank0]:[W1011 04:48:46.842427297 ProcessGroupNCCL.cpp:1538] Warning: WARNING: destroy_process_group() was not called before program exit, which can leak resources. For more info, please see https://pytorch.org/docs/stable/distributed.html#shutdown (function operator())\n",
+            "2025-10-11 04:48:47 - WARNING - ultimate_rvc.rvc.train.train - Process running on device 0 exited with code 1.\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/web/common.py\", line 70, in _wrapped_fn\n",
+            "    res = fn(*args, **kwargs)\n",
+            "          ^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/core/train/train.py\", line 299, in run_training\n",
+            "    train_main(\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/rvc/train/train.py\", line 269, in main\n",
+            "    start()\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/rvc/train/train.py\", line 254, in start\n",
+            "    raise RuntimeError(err_msg)\n",
+            "RuntimeError: One or more training processes failed. See the logs or console for details.\n",
+            "\n",
+            "The above exception was the direct cause of the following exception:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/queueing.py\", line 625, in process_events\n",
+            "    response = await route_utils.call_process_api(\n",
+            "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/route_utils.py\", line 322, in call_process_api\n",
+            "    output = await app.get_blocks().process_api(\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/blocks.py\", line 2136, in process_api\n",
+            "    result = await self.call_function(\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/blocks.py\", line 1662, in call_function\n",
+            "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+            "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/to_thread.py\", line 56, in run_sync\n",
+            "    return await get_async_backend().run_sync_in_worker_thread(\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 2485, in run_sync_in_worker_thread\n",
+            "    return await future\n",
+            "           ^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 976, in run\n",
+            "    result = context.run(func, *args)\n",
+            "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/.venv/lib/python3.12/site-packages/gradio/utils.py\", line 883, in wrapper\n",
+            "    response = f(*args, **kwargs)\n",
+            "               ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/HRVC/src/ultimate_rvc/web/common.py\", line 77, in _wrapped_fn\n",
+            "    raise gr.Error(str(e)) from e\n",
+            "gradio.exceptions.Error: 'One or more training processes failed. See the logs or console for details.'\n"
           ]
         }
       ],
@@ -370,7 +478,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
